Fix align with one card

--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -2,4 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  min-height: 60vh;
 }
